fix overflow in about.css

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -7,6 +7,7 @@
     height: 100vh;
     gap: 20px;
     background-color: #7b2cbf;
+    overflow: hidden;
 }
 
 
@@ -72,4 +73,5 @@
 
   .go-home:hover{
     text-decoration: underline;
-  }
+    color: #f8f9fa;
+}
